 MiscUtilities.copyStream(int bufferSize, ProgressObserver progress, InputStream in, OutputStream out, boolean canStop)
 MiscUtilities.copyStream(ProgressObserver progress, InputStream in, OutputStream out, boolean canStop)
 MiscUtilities.isBinary(Reader reader)
 MiscUtilities.closeQuietly(InputStream in)
 MiscUtilities.closeQuietly(OutputStream out)
 Chunk.init(Segment seg, TabExpander expander, float x, FontRenderContext fontRenderContext)
 DisplayTokenHandler.init(SyntaxStyle[] styles, FontRenderContext fontRenderContext, TabExpander expander, List<Chunk> out, float wrapMargin)
 DisplayTokenHandler.initChunk(Chunk chunk, Segment seg)
 ParserRuleSet.getRules(char ch)
 ParserRule.EXCLUDE_MATCH
 ParserRule.NO_ESCAPE
 ParserRule.next
 ParserRule.createRegexpSequenceRule(char hashChar, int posMatch, String seq, ParserRuleSet delegate, byte id, boolean ignoreCase)
 ParserRule.createRegexpEOLSpanRule(char hashChar, int posMatch, String seq, ParserRuleSet delegate, byte id, byte matchType, boolean ignoreCase)
 PluginManagerProgress.setValue(int value)
 BracketIndentRule.getBrackets(String line)
 CloseBracketIndentRule.isMatch(String line)
 RegexpIndentRule.isMatch(String line)
 DockableLayout.setAlternateLayout()
 GrabKeyDialog.toString(KeyEvent evt)
 InputHandler.readNextChar(String code)
 KeyEventTranslator.translateKeyEvent2(KeyEvent evt)
 KeyEventTranslator.Key.isPhantom()
 VFSBrowser.getFilenameFilter()
 View.ABOVE_ACTION_BAR_LAYER
 View.processKeyEvent(KeyEvent evt, int from, boolean global)
 OperatingSystem.hasJava14()
 OperatingSystem.hasJava15()
 GUIUtilities.centerOnScreen(Window win)
 GUIUtilities.loadStyles(String family, int size)
 GUIUtilities.loadStyles(String family, int size, boolean color)
 GUIUtilities.parseStyle(String str, String family, int size, boolean color)
 GUIUtilities.parseColor(String name, Color defaultColor)
 BeanShell.runScript(View view, String path, Reader in, boolean ownNamespace, boolean rethrowBshErrors)